修改回放生成回复